--- a/KDTreeMapKit/Base.lproj/Main.storyboard
+++ b/KDTreeMapKit/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Demo View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="KDDemoViewController" customModule="KDTreeMapKit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DgU-Jb-p0y" customClass="KDColorKeyView" customModule="KDTreeMapKit" customModuleProvider="target">
+                                <rect key="frame" x="503" y="332" width="77" height="218"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="77" id="Rex-28-ZJi"/>
+                                    <constraint firstAttribute="height" constant="218" id="gnt-6b-fNb"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Root" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvP-j4-RZw">
+                                <rect key="frame" x="524" y="301" width="36" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leaf" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LfT-bV-gRv">
+                                <rect key="frame" x="525" y="560" width="33" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MX6-IV-KxB">
+                                <rect key="frame" x="250" y="275" width="100" height="50"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.41000000000000003" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="9uG-g4-8vs"/>
+                                    <constraint firstAttribute="height" constant="50" id="wvt-tE-HOd"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdq-vF-4hT">
+                                <rect key="frame" x="215" y="517" width="171" height="63"/>
+                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Record View"/>
+                                <connections>
+                                    <action selector="recordViewData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qno-hA-t2c"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="LfT-bV-gRv" firstAttribute="top" secondItem="DgU-Jb-p0y" secondAttribute="bottom" constant="10" id="3Rd-hg-nGt"/>
+                            <constraint firstItem="qvP-j4-RZw" firstAttribute="bottom" secondItem="DgU-Jb-p0y" secondAttribute="top" constant="-10" id="EBc-rS-rdN"/>
+                            <constraint firstItem="LfT-bV-gRv" firstAttribute="centerX" secondItem="DgU-Jb-p0y" secondAttribute="centerX" id="K5d-ew-Asp"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DgU-Jb-p0y" secondAttribute="bottom" constant="50" id="MM8-lp-9El"/>
+                            <constraint firstItem="MX6-IV-KxB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XZi-FG-BhV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DgU-Jb-p0y" secondAttribute="trailing" id="ijl-2e-Rwi"/>
+                            <constraint firstItem="qvP-j4-RZw" firstAttribute="centerX" secondItem="DgU-Jb-p0y" secondAttribute="centerX" id="m55-se-G0E"/>
+                            <constraint firstItem="MX6-IV-KxB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rUe-lP-1pc"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nodeColorKey" destination="DgU-Jb-p0y" id="XJi-Ad-br2"/>
+                        <outlet property="queryArea" destination="MX6-IV-KxB" id="f0s-UY-m8g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-9" y="-67"/>
         </scene>
     </scenes>
 </document>
