--- a/KDTreeMapKit/Base.lproj/Main.storyboard
+++ b/KDTreeMapKit/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -38,19 +38,11 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MX6-IV-KxB">
-                                <rect key="frame" x="250" y="275" width="100" height="50"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.41000000000000003" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="9uG-g4-8vs"/>
-                                    <constraint firstAttribute="height" constant="50" id="wvt-tE-HOd"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdq-vF-4hT">
-                                <rect key="frame" x="215" y="517" width="171" height="63"/>
+                                <rect key="frame" x="215" y="550" width="171" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="63" id="0xK-QY-LC5"/>
+                                    <constraint firstAttribute="height" constant="30" id="0xK-QY-LC5"/>
                                     <constraint firstAttribute="width" constant="171" id="Nc6-d2-0wa"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -59,25 +51,52 @@
                                     <action selector="recordViewData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qno-hA-t2c"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MU7-v8-Yu1">
+                                <rect key="frame" x="222" y="50" width="157" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="157" id="Kuc-zJ-TJ7"/>
+                                    <constraint firstAttribute="height" constant="30" id="zhZ-ii-jmM"/>
+                                </constraints>
+                                <state key="normal" title="Animate"/>
+                                <connections>
+                                    <action selector="animateData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dGn-Uj-M6x"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RLD-Xi-bXq">
+                                <rect key="frame" x="0.0" y="20" width="600" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7re-G2-LtV"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Points"/>
+                                    <segment title="Areas"/>
+                                </segments>
+                                <connections>
+                                    <action selector="queryOptionAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="zJd-5g-mjf"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xdq-vF-4hT" secondAttribute="bottom" constant="20" id="04C-Ma-xML"/>
                             <constraint firstItem="LfT-bV-gRv" firstAttribute="top" secondItem="DgU-Jb-p0y" secondAttribute="bottom" constant="10" id="3Rd-hg-nGt"/>
+                            <constraint firstItem="MU7-v8-Yu1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="Beu-5o-C3g"/>
                             <constraint firstItem="qvP-j4-RZw" firstAttribute="bottom" secondItem="DgU-Jb-p0y" secondAttribute="top" constant="-10" id="EBc-rS-rdN"/>
                             <constraint firstItem="LfT-bV-gRv" firstAttribute="centerX" secondItem="DgU-Jb-p0y" secondAttribute="centerX" id="K5d-ew-Asp"/>
+                            <constraint firstItem="RLD-Xi-bXq" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="LH7-kK-m3V"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="DgU-Jb-p0y" secondAttribute="bottom" constant="50" id="MM8-lp-9El"/>
-                            <constraint firstItem="MX6-IV-KxB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XZi-FG-BhV"/>
+                            <constraint firstItem="RLD-Xi-bXq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="MqQ-z3-uoF"/>
                             <constraint firstItem="xdq-vF-4hT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i5C-bj-BeP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DgU-Jb-p0y" secondAttribute="trailing" id="ijl-2e-Rwi"/>
+                            <constraint firstItem="RLD-Xi-bXq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kNy-uG-rYN"/>
                             <constraint firstItem="qvP-j4-RZw" firstAttribute="centerX" secondItem="DgU-Jb-p0y" secondAttribute="centerX" id="m55-se-G0E"/>
-                            <constraint firstItem="MX6-IV-KxB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rUe-lP-1pc"/>
+                            <constraint firstItem="MU7-v8-Yu1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mVD-Xu-nph"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="nodeColorKey" destination="DgU-Jb-p0y" id="XJi-Ad-br2"/>
-                        <outlet property="queryArea" destination="MX6-IV-KxB" id="f0s-UY-m8g"/>
+                        <outlet property="queryOptions" destination="RLD-Xi-bXq" id="ScI-bf-lnX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
